--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 /* --БАЗОВОЙ СБРОС-- */
-:root {
+/* :root {
   --main-font: "Roboto", sans-serif;
   --secondary-font: "Raleway", sans-serif;
   --accent-color: #2196f3;
   --saction-pt: 47px;
   --saction-pb: 47px;
-}
+} */
 
-body {
+/* body {
   font-family: var(--main-font);
   width: 100%;
   max-width: 100%;
@@ -44,37 +44,37 @@ img {
 
 .address {
   font-style: normal;
-}
+} */
 
-.visually-hidden {
+/* .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
+  /* clip: rect(1px, 1px, 1px, 1px);
   padding: 0 !important;
   border: 0 !important;
   height: 1px !important;
   width: 1px !important;
   overflow: hidden;
-}
+}  */
 
 /* -- END БАЗОВОЙ СБРОС-- */
 
-.container {
+/* .container {
   width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
   /* padding-top: var(--saction-pt); */
   /* padding-bottom: var(--saction-pb); */
-  text-align: center;
-}
+  /* text-align: center;
+}  */
 
-.section {
+/* .section {
   padding-top: var(--saction-pt);
   padding-bottom: var(--saction-pb);
-}
+} */
 /*---------HEADER--------*/
-.header {
+/* .header {
   padding-top: 24px;
   padding-bottom: 25px;
   border-bottom: 1px solid #ececec;
@@ -128,18 +128,17 @@ img {
 
   background: #2196F3;
   border-radius: 2px;
-}
+} */
 
 
 /*--------- END HEADER--------*/
 
 /*---------HERO--------*/
-.hero {
+ /* .hero {
   max-width: 1600px;
   margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
-  /* height: 600px; */
   background: #2f303a;
   text-align: center;
   background-image: linear-gradient(
@@ -161,11 +160,9 @@ img {
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   min-width: 200px;
-  /* height: 50px; */
-  /* border-radius: 4px; */
   border: none;
   padding: 10px 32px;
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  
 }
 
 .hero-title {
@@ -175,18 +172,16 @@ img {
   text-transform: uppercase;
 
   color: #ffffff;
-  /* background: #2F303A; */
 
   margin-bottom: 30px;
   width: 696px;
-  /* height: 120px;   */
   margin-left: auto;
   margin-right: auto;
-}
+}  */
 /*--------- END HERO--------*/
 
 /*---------features--------*/
-
+/* 
 .features-list {
   display: flex;
   margin-left: -30px;
@@ -213,7 +208,6 @@ img {
 .features-list-icon {
   width: 70px;
   height: 70px;
-  /* fill: ; */
 }
 
 .titles-list {
@@ -235,11 +229,11 @@ img {
   letter-spacing: 0.03em;
 
   color: #757575;
-}
+} */
 /*---------END features--------*/
 
 /*---------ABOUT--------*/
-.about-list {
+/* .about-list {
   display: flex;
   margin-left: -30px;
   margin-top: -30px;
@@ -261,7 +255,6 @@ img {
 }
 
 .about-text-background {
-  /* position: absolute; */
   margin: 27px auto ;
   width: 198px;
   height: 16px;
@@ -269,16 +262,15 @@ img {
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
-  /* text-transform: uppercase; */
 
   color: #FFFFFF;
+} */
 
-}
 /*--------- END ABOUT--------*/
 
 /*---------TEAM--------*/
 
-.team {
+/* .team {
   padding-bottom: 47px;
   background: #f5f4fa;
 }
@@ -307,7 +299,6 @@ img {
   margin-top: 30px;
   flex-basis: calc(100% / 4 - 30px);
   background: #ffffff;
-  /* material shadow v1 */
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -330,7 +321,7 @@ img {
 
   color: #757575;
   text-align: center;
-}
+} */
 /*--------- END TEAM--------*/
 
 /* ------our clients------- */
@@ -344,8 +335,6 @@ img {
   margin-top: -30px;
   justify-content: center;
   align-items: center;
-  /* width: 44px; */
-  /* height: 44px; */
 }
 
 .clients-list-item {
@@ -372,9 +361,6 @@ img {
 }
 
 .clients-logo-icon {
-  /* width: 50px;
-  height: 45px; */
-  /* margin-right: 10px; */
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -850,7 +836,9 @@ height: 30px; */
 
 /* ---END MODAL WINDOW--- */
 
-.logo {
+/* ---COMPONENTS */
+
+/* .logo {
   font-family: var(--secondary-font);
   font-weight: bold;
   font-size: 26px;
@@ -861,23 +849,23 @@ height: 30px; */
 
   margin-right: 93px;
   /* margin-bottom: 20px;  */
-}
+/* }
 .logo-light-theme {
   color: #212121;
 }
 .logo-dark-theme {
   color: #ffffff;
-}
+}  */
 
-.contact-list-icon {
+/* .contact-list-icon {
   width: 16px;
   height: 12px;
   margin-right: 10px;
   fill: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.contact-link:hover .contact-list-icon,
+/* .contact-link:hover .contact-list-icon,
 .contact-link:focus .contact-list-icon {
   fill: var(--accent-color);
 }
@@ -894,28 +882,28 @@ height: 30px; */
   margin-right: 50px;
   margin-bottom: 9px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.contact-list-link {
+/* .contact-list-link {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.contact-link:hover,
+/* .contact-link:hover,
 .contact-link:focus {
   color: #2196f3;
-}
+} */
 
-.tel-list-icon {
+/* .tel-list-icon {
   width: 10px;
   height: 16px;
   margin-right: 10px;
   fill: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.tel-link:hover .tel-list-icon,
+/* .tel-link:hover .tel-list-icon,
 .tel-link:focus .tel-list-icon {
   fill: var(--accent-color);
 }
@@ -931,20 +919,20 @@ height: 30px; */
   margin-right: 50px;
   margin-bottom: 9px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.tel-list-link {
+/* .tel-list-link {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.tel-link:hover,
+/* .tel-link:hover,
 .tel-link:focus {
   color: #2196f3;
-}
+} */
 
-.title {
+/* .title {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.17;
@@ -953,9 +941,9 @@ height: 30px; */
 
   margin-bottom: 50px;
   text-align: center;
-}
+} */
 
-.social-list {
+/* .social-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -995,7 +983,9 @@ height: 30px; */
   width: 20px;
   height: 20px;
   fill: #ffffff;
-}
+} */
+
+/* ---END COMPONENTS--- */
 
 /*-------PORTFOLIO---------*/
 
