--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,26 @@
-@import "./utils/variables";
+@import "./utils/variebles";
+
 @import "./base/common";
+
 @import "./utils/visually-hidden";
-@import "./base/_container"
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
-// @import ""
+
+@import "./base/container";
+@import "./base/section";
+
+@import "./components/logo";
+@import "./components/contact-list-icon";
+@import "./components/contact-link";
+@import "./components/contact-list-link";
+@import "./components/tel-list-icon";
+@import "./components/tel-link";
+@import "./components/tel-list-link";
+@import "./components/title";
+@import "./components/social-list";
+
+@import "./layout/header";
+@import "./layout/hero";
+@import "./layout/features";
+@import "./layout/about";
+@import "./layout/team";
+// @import "";
+// @import "";
