--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,3 +1,4 @@
+
 @import "./utils/variebles";
 
 @import "./base/common";
@@ -14,19 +15,15 @@
 @import "./components/tel-list-icon";
 @import "./components/tel-link";
 @import "./components/tel-list-link";
-@import "./components/title";
-@import "./components/social-list";
-@import "./components/backdrop";
-@import "./components/modal";
-@import "./components/modal-form";
+@import "./components/filters";
+@import "./components/projects";
 
 @import "./layout/header";
-@import "./layout/hero";
-@import "./layout/features";
-@import "./layout/about";
-@import "./layout/team";
-@import "./layout/clients";
 @import "./layout/footer";
+// @import "";
+// @import "";
+// @import "";
+// @import "";
 // @import "";
 // @import "";
 // @import "";
