--- a/css/styles.css
+++ b/css/styles.css
@@ -325,7 +325,8 @@ img {
 /*--------- END TEAM--------*/
 
 /* ------our clients------- */
-.clients {
+
+/* .clients { 
   padding-bottom: 94px;
 }
 
@@ -368,12 +369,12 @@ img {
 .clients-logo-link:hover .clients-logo-icon,
 .clients-logo-link:focus .clients-logo-icon {
   fill: var(--accent-color);
-}
+}  */
 
 /* ------end our clients------- */
 
 /*---------FOOTER--------*/
-.footer {
+/* .footer {
   background-color: #2f303a;
   margin: 0;
   padding: 60px 0;
@@ -381,11 +382,8 @@ img {
 
 .footer-container {
   display: flex;
-  /* align-items: center; */
   width: 1600px;
   height: 252px;
-  /* padding-left: 15px;
-  padding-right: 15px; */
 
   background: #2f303a;
 }
@@ -393,17 +391,11 @@ img {
 .footer-address-container {
   display: block;
   box-sizing: border-box;
-  /* margin-right: 70px; */
 } 
 
-/* .item {
-  margin-bottom: 20px;
-} */
 
 .address {
   position: absolute;
-  /* width: 231px;
-  height: 81px; */
   display: block;
   margin-top: 20px;
   margin-right: 215px;
@@ -423,8 +415,6 @@ img {
   color: #ffffff;
 
   margin-left: auto;
-  /* margin-right: 50px; */
-  /* margin-bottom: 9px; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -438,18 +428,14 @@ img {
 } 
 
 .social-list-container {
-  /* position: absolute; */
   width: 206px;
   height: 80px;
   margin: 0 0 0 70px;
   align-items: center;
   justify-content: flex-start;
-  /* margin-left: 70px; */
 }
 
 .titles-dark-them {
-  /* color: #ffffff;
-  margin-bottom: 20px; */
   display: block;
   margin: 0 0 20px 0;
   padding: 0;
@@ -465,8 +451,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* margin-left: 32px;
-  margin-right: 32px; */
 }
 
 .social-list-link-footer {
@@ -516,8 +500,6 @@ img {
   border-radius: 4px;
 }
 
-/* .footer-form-input::placeholder { */ 
-
 .subscription-btn {
   min-width: 200px;
   height: 50px;
@@ -531,14 +513,8 @@ img {
   border-radius: 4px;
   border: none;
 
-/* width: 109px;
-height: 30px; */
-
   font-size: 16px;
   line-height: 1.88;
-
-  /* display: flex; */
-/* align-items: center; */
   text-align: center;
   letter-spacing: 0.06em;
 
@@ -553,13 +529,13 @@ height: 30px; */
   margin-bottom: auto;
   
   fill: #FFFFFF;
-}
+} */
 
 /*--------- END FOOTER--------*/
 
 /* ---MODAL WINDOW--- */
 
-.backdrop {
+/* .backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -567,9 +543,9 @@ height: 30px; */
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.modal {
+/* .modal {
   position: absolute;
   width: 528px;
   min-height: 580px;
@@ -577,9 +553,6 @@ height: 30px; */
   top: 50%;
   padding: 40px;
   transform: translate(-50%,-50%);
-  /* animation-name: translate;
-  animation-duration: 250ms;
-  animation-iteration-count: 2; */
 
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -592,14 +565,11 @@ height: 30px; */
   right: 8px;
   width: 30px;
   height: 30px;
-  /* left: 1026px;
-  top: 229px; */
   padding: 1px 5px;
 
   background: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  /* box-sizing: border-box; */
   cursor: pointer;
 } 
 
@@ -612,227 +582,179 @@ height: 30px; */
   opacity: 0;  
   visibility: hidden;
   pointer-events: none; 
- } 
+ }  */
 
- .modal-form {
-   display: flex;
-   flex-direction: column;
- }
-
- .modal-text {
-  /* position: absolute; */
-  width: 448px;
-  height: 23px;
-  margin-bottom: 12px;
-  /* left: 576px;
-  top: 261px;
-  
-  font-family: Roboto;
-  font-style: normal; */
-  /* font-weight: bold;  */
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  
-  color: #212121;
-   }
+ /* .modal-form {
+    display: flex;
+    flex-direction: column;
+  }
+ 
+  .modal-text {
+   width: 448px;
+   height: 23px;
+   margin-bottom: 12px;
    
-.modal-form-field{
-    margin-bottom: 10px;
-    font-size: 12px;
-    line-height: 1.17;
-    /* identical to box height */
-    letter-spacing: 0.01em;
+   font-size: 20px;
+   line-height: 1.15;
+   text-align: center;
+   letter-spacing: 0.03em;
+   
+   color: #212121;
+    }
     
-    color: #757575;
-   }
-  
-.modal-form-input-wrapper {
-    position: relative;
-    display: block;
-    margin-top: 4px;
-   }
-
-.modal-form-input{
-  width: 100%;
-  height: 40px;
-  /* border: 1px solid #2196F3; */
-  box-sizing: border-box;
-  border-radius: 4px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  padding-left: 42px;
-  /* margin-top: 4px; */
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+ .modal-form-field{
+     margin-bottom: 10px;
+     font-size: 12px;
+     line-height: 1.17;
+     letter-spacing: 0.01em;
+     
+     color: #757575;
+    }
+   
+ .modal-form-input-wrapper {
+     position: relative;
+     display: block;
+     margin-top: 4px;
+    }
+ 
+ .modal-form-input{
+   width: 100%;
+   height: 40px;
+   box-sizing: border-box;
+   border-radius: 4px;
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   padding-left: 42px;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+ 
+  .modal-form-input:focus {
+   outline: none;
+   border-color: var(--accent-color);
+  }
+ 
+  .modal-form-input:focus + .modal-form-icon {
+    fill:var(--accent-color);
+  }
+  .modal-form-icon {
+   position: absolute;
+   top: 50%;
+   left: 12px;
+   width: 18px;
+   height: 18px;
+   transform: translateY(-50%);
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-
- .modal-form-input:focus {
-  outline: none;
-  border-color: var(--accent-color);
+ 
+ .modal-comment {
+   margin-bottom: 20px;
  }
-
- .modal-form-input:focus + .modal-form-icon {
-   fill:var(--accent-color);
+ 
+ .modal-form-comment {
+   width: 100%;
+   height: 120px;
+   padding: 12px 16px;
+ 
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   box-sizing: border-box;
+   border-radius: 4px;
+   resize: none;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
- .modal-form-icon {
-  position: absolute;
-  /* display: block; */
-  top: 50%;
-  left: 12px;
-  width: 18px;
-  height: 18px;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-comment {
-  margin-bottom: 20px;
-}
-
-.modal-form-comment {
-  width: 100%;
-  /* position: absolute; */
-  height: 120px;
-  padding: 12px 16px;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-comment::placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form-comment:focus {
-  outline: none;
-  border-color: var(--accent-color);
-}
-
-.modal-form-term { 
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-  .modal-form-term:checked + .icon-check {
-  /* color: #757575;
-  background-color:var(--accent-color) ;
-  background-image: url();
-  background-position: center;
-  border: 4px solid #FFFFFF; */
-  background-color: var(--accent-color);
-  transition:background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
-}  
-
-.modal-form-term:focus + .modal-form-check-desc::before {
-  box-shadow: 0 0 0 2px var(--accent-color) ;
-  /* background-image: url("../images/check.svg#check");
-  background-position: center; */
-}
-
-.icon-check {
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  /* background-image: url("../images/check.svg#check"); */
-}
-
-.modal-form-check-desc {
-  display: flex;
-  align-items: center;
-  position: relative;
-  font-size: 14px; 
-  line-height: 24px;
-  margin-bottom: 30px;
-  letter-spacing: 0.03em;
-
-  color: #757575;
-}
-
-.modal-form-check-desc::before {
-  display: block;
-  content: "";
-  width: 16px;
-  height: 16px;
-  margin-right: 8px;
-  color: #212121;
-  outline: 1px solid #000000 ;
-  cursor: pointer;
-}
-.checkbox-link {
-  color: var(--accent-color);
-}
-
-
-/* .modal-form-term {  
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;  
-}
-
-.modal-form-term:checked + .icon-check{
-  background-color: #188CE8;;
-}
-
-.icon-check {
-  position: absolute;
-  width: 16px;
-  height: 16px;
-}  */
-
-.modal-form-btn {
-  /* position: absolute; */
-  width: 200px;
-  height: 50px;
-  align-self: center;
-  /* margin-left: auto;
-  margin-right: auto; */
-  /* margin-top: 30px; */
-
-  background: #2196F3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-
-  /* position: absolute;
-  width: 89px;
-  height: 30px; */
-  font-size: 16px;
-  line-height: 1.88;
-  padding: 10px 56px;
-/* identical to box height, or 187% */
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-
-  color: #FFFFFF;
-}
-
-.modal-form-btn:focus,
-.modal-form-btn:hover {
-  background-color: #188CE8;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+ 
+ .modal-form-comment::placeholder {
+   font-size: 12px;
+   line-height: 1.17;
+   letter-spacing: 0.01em;
+ 
+   color: rgba(117, 117, 117, 0.5);
+ }
+ 
+ .modal-form-comment:focus {
+   outline: none;
+   border-color: var(--accent-color);
+ }
+ 
+ .modal-form-term { 
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0;
+   padding: 0;
+   clip: rect(0 0 0 0);
+   overflow: hidden;
+ }
+ 
+   .modal-form-term:checked + .icon-check {
+   background-color: var(--accent-color);
+   transition:background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }  
+ 
+ .modal-form-term:focus + .modal-form-check-desc::before {
+   box-shadow: 0 0 0 2px var(--accent-color) ;
+ }
+ 
+ .icon-check {
+   position: absolute;
+   width: 16px;
+   height: 16px;
+  //  background-image: url("../images/check.svg#check"); 
+ }
+ 
+ .modal-form-check-desc {
+   display: flex;
+   align-items: center;
+   position: relative;
+   font-size: 14px; 
+   line-height: 24px;
+   margin-bottom: 30px;
+   letter-spacing: 0.03em;
+ 
+   color: #757575;
+ }
+ 
+ .modal-form-check-desc::before {
+   display: block;
+   content: "";
+   width: 16px;
+   height: 16px;
+   margin-right: 8px;
+   color: #212121;
+   outline: 1px solid #000000 ;
+   cursor: pointer;
+ }
+ .checkbox-link {
+   color: var(--accent-color);
+ }
+ 
+ .modal-form-btn {
+   width: 200px;
+   height: 50px;
+   align-self: center;
+ 
+   background: #2196F3;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+   border-radius: 4px;
+   border: none;
+ 
+   font-size: 16px;
+   line-height: 1.88;
+   padding: 10px 56px;
+ 
+   display: flex;
+   align-items: center;
+   text-align: center;
+   letter-spacing: 0.06em;
+   cursor: pointer;
+ 
+   color: #FFFFFF;
+ }
+ 
+ .modal-form-btn:focus,
+ .modal-form-btn:hover {
+   background-color: #188CE8;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ } */
 
 /* ---END MODAL WINDOW--- */
 
@@ -991,19 +913,17 @@ height: 30px; */
 
 /*---------FILTERS--------*/
 
-.portfolio {
+.portfolio { 
   margin-top: 94px;
 }
 
-.filters {
+/* .filters {
   margin-bottom: 30px;
 }
 
 .filters-box {
   padding-top: 6px;
   padding-bottom: 22px;
-  /* margin-bottom: 30px; */
-  /* text-align: center; */
 }
 
 .filters-list {
@@ -1023,10 +943,7 @@ height: 30px; */
   line-height: 1.63;
   letter-spacing: 0.03em;
 
-  /* color: #212121; */
-
   min-width: 73px;
-  /* height: 50px; */
   padding: 6px 22px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -1041,11 +958,11 @@ height: 30px; */
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-}
+}  */
 /*--------- END FILTERS--------*/
 
 /*--------- OUR PROJECTS--------*/
-.projects-list {
+ /* .projects-list {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
@@ -1064,7 +981,6 @@ height: 30px; */
 .projects-list-item:focus {
   cursor: pointer;
   background: #ffffff;
-  /* border: 1px solid #eeeeee; */
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -1078,8 +994,6 @@ height: 30px; */
 .projects-list-contant-wrapper {
   position: relative;
   overflow: hidden;
-  /* width: 370px;
-  height: 294px; */
 }
 
 .overlay {
@@ -1088,10 +1002,8 @@ height: 30px; */
   background: rgba(33, 150, 243, 0.9);
   top: 0;
   left: 0;
-  /* width: 322px; */
   height: 100%;
   padding: 63px 24px;
-  /* overflow: scroll; */
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
@@ -1110,7 +1022,7 @@ height: 30px; */
 
 .project-title-description {
   color: #757575;
-}
+}  */
 
 /*--------- END OUR PROJECTS--------*/
 
