--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,6 +12,20 @@
       url("../images/hero/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+
+    &__title {
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 1.36;
+      text-transform: uppercase;
+    
+      color: #ffffff;
+    
+      margin-bottom: 30px;
+      width: 696px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
   
   .modal-btn {
@@ -26,20 +40,9 @@
     min-width: 200px;
     border: none;
     padding: 10px 32px;
-    
   }
+
   
-  .hero-title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-transform: uppercase;
   
-    color: #ffffff;
   
-    margin-bottom: 30px;
-    width: 696px;
-    margin-left: auto;
-    margin-right: auto;
-  } 
   
