--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,6 @@ img {
   letter-spacing: 0.03em;
   color: #2196f3;
   margin-right: 93px;
-  /* margin-bottom: 20px;  */
 }
 
 .logo-light-theme {
@@ -116,8 +115,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.contact-link:hover, .contact-link:focus {
   color: #2196f3;
 }
 
@@ -125,19 +123,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.tel-list-icon {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  fill: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.tel-link:hover .tel-list-icon,
-.tel-link:focus .tel-list-icon {
-  fill: var(--accent-color);
 }
 
 .tel-link {
@@ -151,9 +136,21 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.tel-link:hover,
-.tel-link:focus {
+.tel-link:hover, .tel-link:focus {
   color: #2196f3;
+}
+
+.tel-list-icon {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tel-link:hover .tel-list-icon,
+.tel-link:focus .tel-list-icon {
+  fill: var(--accent-color);
 }
 
 .tel-list-link {
@@ -190,14 +187,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover,
-.social-list-link:focus {
+.social-list-link:hover, .social-list-link:focus {
   background-color: var(--accent-color);
-}
-
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
-  fill: #ffffff;
 }
 
 .social-list-icon {
@@ -205,6 +196,11 @@ img {
   height: 20px;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link:hover .social-list-icon,
+.social-list-link:focus .social-list-icon {
+  fill: #ffffff;
 }
 
 .social-list-icon_dark-theme {
@@ -249,8 +245,7 @@ img {
   cursor: pointer;
 }
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal-close-btn:hover, .modal-close-btn:focus {
   fill: var(--accent-color);
 }
 
@@ -265,7 +260,7 @@ img {
   flex-direction: column;
 }
 
-.modal-text {
+.modal-form__text {
   width: 448px;
   height: 23px;
   margin-bottom: 12px;
@@ -276,7 +271,7 @@ img {
   color: #212121;
 }
 
-.modal-form-field {
+.modal-form__field {
   margin-bottom: 10px;
   font-size: 12px;
   line-height: 1.17;
@@ -284,13 +279,13 @@ img {
   color: #757575;
 }
 
-.modal-form-input-wrapper {
+.modal-form__input-wrapper {
   position: relative;
   display: block;
   margin-top: 4px;
 }
 
-.modal-form-input {
+.modal-form__input {
   width: 100%;
   height: 40px;
   box-sizing: border-box;
@@ -300,16 +295,12 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-input:focus {
+.modal-form__input:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
-}
-
-.modal-form-icon {
+.modal-form__icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -319,11 +310,15 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-form__input:focus + .modal-form__icon {
+  fill: var(--accent-color);
+}
+
 .modal-comment {
   margin-bottom: 20px;
 }
 
-.modal-form-comment {
+.modal-form__comment {
   width: 100%;
   height: 120px;
   padding: 12px 16px;
@@ -334,19 +329,19 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-comment::placeholder {
+.modal-form__comment::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form-comment:focus {
+.modal-form__comment:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.modal-form-term {
+.modal-form__term {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -357,22 +352,18 @@ img {
   overflow: hidden;
 }
 
-.modal-form-term:checked + .icon-check {
-  background-color: var(--accent-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-term:focus + .modal-form-check-desc::before {
-  box-shadow: 0 0 0 2px var(--accent-color);
-}
-
-.icon-check {
+.check__icon {
   position: absolute;
   width: 16px;
   height: 16px;
 }
 
-.modal-form-check-desc {
+.modal-form__term:checked + .check__icon {
+  background-color: var(--accent-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__check-desc {
   display: flex;
   align-items: center;
   position: relative;
@@ -383,7 +374,7 @@ img {
   color: #757575;
 }
 
-.modal-form-check-desc::before {
+.modal-form__check-desc::before {
   display: block;
   content: "";
   width: 16px;
@@ -394,11 +385,15 @@ img {
   cursor: pointer;
 }
 
-.checkbox-link {
+.modal-form__term:focus + .modal-form__check-desc::before {
+  box-shadow: 0 0 0 2px var(--accent-color);
+}
+
+.checkbox__link {
   color: var(--accent-color);
 }
 
-.modal-form-btn {
+.modal-form__btn {
   width: 200px;
   height: 50px;
   align-self: center;
@@ -417,8 +412,7 @@ img {
   color: #FFFFFF;
 }
 
-.modal-form-btn:focus,
-.modal-form-btn:hover {
+.modal-form__btn:focus, .modal-form__btn:hover {
   background-color: #188CE8;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -453,8 +447,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation-link:hover,
-.navigation-link:focus {
+.navigation-link:hover, .navigation-link:focus {
   color: #2196f3;
 }
 
@@ -489,6 +482,18 @@ img {
   background-size: cover;
 }
 
+.hero__title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 30px;
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .modal-btn {
   font-weight: bold;
   font-size: 16px;
@@ -502,31 +507,19 @@ img {
   padding: 10px 32px;
 }
 
-.hero-title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 30px;
-  width: 696px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .features-list {
   display: flex;
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.features-list-item {
+.features-list__item {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 4 - 30px);
 }
 
-.feature-container-list {
+.feature-container__list {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -537,7 +530,7 @@ img {
   border-radius: 4px;
 }
 
-.features-list-icon {
+.features-list__icon {
   width: 70px;
   height: 70px;
 }
@@ -552,7 +545,7 @@ img {
   margin-bottom: 10px;
 }
 
-.titles-list-description {
+.titles-list__description {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -566,14 +559,14 @@ img {
   margin-top: -30px;
 }
 
-.about-list-item {
+.about-list__item {
   position: relative;
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 3 - 30px);
 }
 
-.about-list-wrapper {
+.about-list__wrapper {
   bottom: 0;
   position: absolute;
   width: 370px;
@@ -581,7 +574,7 @@ img {
   background: rgba(47, 48, 58, 0.8);
 }
 
-.about-text-background {
+.about-text_background {
   margin: 27px auto;
   width: 198px;
   height: 16px;
@@ -597,7 +590,7 @@ img {
   background: #f5f4fa;
 }
 
-.team-title {
+.team__title {
   font-style: normal;
   font-size: 16px;
   font-weight: 500;
@@ -614,19 +607,19 @@ img {
   margin-top: -30px;
 }
 
-.team-list-item {
+.team-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team-list__item {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 4 - 30px);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-.team-container {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-title-description {
@@ -651,7 +644,7 @@ img {
   align-items: center;
 }
 
-.clients-list-item {
+.clients-list__item {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 6 - 30px);
@@ -665,7 +658,7 @@ img {
   border-radius: 4px;
 }
 
-.clients-logo-link {
+.clients-logo__link {
   width: 170px;
   height: 90px;
   display: flex;
@@ -674,13 +667,13 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-logo-icon {
+.clients-logo__icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-logo-link:hover .clients-logo-icon,
-.clients-logo-link:focus .clients-logo-icon {
+.clients-logo__link:hover .clients-logo__icon,
+.clients-logo__link:focus .clients-logo__icon {
   fill: var(--accent-color);
 }
 
@@ -710,7 +703,7 @@ img {
   text-align: left;
 }
 
-.items {
+.address-list-footer__item {
   margin-bottom: 9px;
 }
 
@@ -725,8 +718,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-address:hover,
-.contact-address:focus {
+.contact-address:hover, .contact-address:focus {
   color: #2196f3;
 }
 
@@ -760,7 +752,7 @@ img {
   justify-content: space-between;
 }
 
-.social-list-link-footer {
+.social-list-footer__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -771,18 +763,17 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link-footer:hover,
-.social-list-link-footer:focus {
+.social-list-footer__link:hover, .social-list-footer__link:focus {
   background-color: var(--accent-color);
 }
 
-.social-list-icon-footer {
+.social-list-footer__icon {
   width: 20px;
   height: 20px;
   fill: #ffffff;
 }
 
-.footer-subscription-container {
+.footer-container__subscription {
   margin-left: 94px;
 }
 
@@ -790,7 +781,7 @@ img {
   display: flex;
 }
 
-.footer-form-input {
+.footer-form__input {
   width: 358px;
   height: 50px;
   padding-left: 16px;
