--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -80,7 +80,6 @@ img {
   letter-spacing: 0.03em;
   color: #2196f3;
   margin-right: 93px;
-  /* margin-bottom: 20px;  */
 }
 
 .logo-light-theme {
@@ -116,8 +115,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.contact-link:hover, .contact-link:focus {
   color: #2196f3;
 }
 
@@ -125,19 +123,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.tel-list-icon {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  fill: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.tel-link:hover .tel-list-icon,
-.tel-link:focus .tel-list-icon {
-  fill: var(--accent-color);
 }
 
 .tel-link {
@@ -151,9 +136,21 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.tel-link:hover,
-.tel-link:focus {
+.tel-link:hover, .tel-link:focus {
   color: #2196f3;
+}
+
+.tel-list-icon {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tel-link:hover .tel-list-icon,
+.tel-link:focus .tel-list-icon {
+  fill: var(--accent-color);
 }
 
 .tel-list-link {
@@ -178,11 +175,11 @@ img {
   justify-content: center;
 }
 
-.filters-list-item {
+.filters-list__item {
   margin-left: 8px;
 }
 
-.filters-btn {
+.filters__btn {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
@@ -195,8 +192,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filters-btn:hover,
-.filters-btn:focus {
+.filters__btn:hover, .filters__btn:focus {
   color: #ffffff;
   background: #2196f3;
   cursor: pointer;
@@ -217,26 +213,25 @@ img {
   padding-bottom: 94px;
 }
 
-.projects-list-item {
+.projects-list__item {
   margin-left: 30px;
   margin-top: 30px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-list-item:hover,
-.projects-list-item:focus {
+.projects-list__item:hover, .projects-list__item:focus {
   cursor: pointer;
   background: #ffffff;
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.projects-list-link-wrapper:hover .overlay,
-.projects-list-link-wrapper:focus .overlay {
+.projects-list__link-wrapper:hover .overlay,
+.projects-list__link-wrapper:focus .overlay {
   transform: translateY(0%);
 }
 
-.projects-list-contant-wrapper {
+.projects-list__contant-wrapper {
   position: relative;
   overflow: hidden;
 }
@@ -265,7 +260,7 @@ img {
   color: #212121;
 }
 
-.project-title-description {
+.project-title__description {
   color: #757575;
 }
 
@@ -299,8 +294,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation-link:hover,
-.navigation-link:focus {
+.navigation-link:hover, .navigation-link:focus {
   color: #2196f3;
 }
 
@@ -349,7 +343,7 @@ img {
   text-align: left;
 }
 
-.items {
+.address-list-footer__item {
   margin-bottom: 9px;
 }
 
@@ -364,8 +358,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-address:hover,
-.contact-address:focus {
+.contact-address:hover, .contact-address:focus {
   color: #2196f3;
 }
 
@@ -399,7 +392,7 @@ img {
   justify-content: space-between;
 }
 
-.social-list-link-footer {
+.social-list-footer__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -410,18 +403,17 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link-footer:hover,
-.social-list-link-footer:focus {
+.social-list-footer__link:hover, .social-list-footer__link:focus {
   background-color: var(--accent-color);
 }
 
-.social-list-icon-footer {
+.social-list-footer__icon {
   width: 20px;
   height: 20px;
   fill: #ffffff;
 }
 
-.footer-subscription-container {
+.footer-container__subscription {
   margin-left: 94px;
 }
 
@@ -429,7 +421,7 @@ img {
   display: flex;
 }
 
-.footer-form-input {
+.footer-form__input {
   width: 358px;
   height: 50px;
   padding-left: 16px;
