--- a/sass/components/_contact-link.scss
+++ b/sass/components/_contact-link.scss
@@ -1,7 +1,4 @@
-.contact-link:hover .contact-list-icon,
-.contact-link:focus .contact-list-icon {
-  fill: var(--accent-color);
-}
+
 
 .contact-link {
   font-weight: 500;
@@ -15,9 +12,11 @@
   margin-right: 50px;
   margin-bottom: 9px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+   color: #2196f3;
+ }
 }
 
-.contact-link:hover,
-.contact-link:focus {
-  color: #2196f3;
-}
+ 
