--- a/sass/components/_contact-list-icon.scss
+++ b/sass/components/_contact-list-icon.scss
@@ -1,7 +1,14 @@
-.contact-list-icon {
+ .contact-list-icon {
     width: 16px;
     height: 12px;
     margin-right: 10px;
     fill: #757575;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .contact-link:hover &,
+  .contact-link:focus & {
+    fill: var(--accent-color);
   }
+   }
+  
+  
