--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -12,13 +12,14 @@
     margin-left: -8px;
     flex-basis: calc(100% / 5 - 8px);
     justify-content: center;
+
+    &__item {
+      margin-left: 8px;
+    }
   }
   
-  .filters-list-item {
-    margin-left: 8px;
-  }
   
-  .filters-btn {
+  .filters__btn {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -30,9 +31,9 @@
     border-radius: 4px;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .filters-btn:hover,
-  .filters-btn:focus {
+
+  &:hover,
+  &:focus {
     color: #ffffff;
     background: #2196f3;
     cursor: pointer;
@@ -40,3 +41,5 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
   }
+  }
+  
