--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
   }
  
-  .modal-text {
+  .modal-form__text {
    width: 448px;
    height: 23px;
    margin-bottom: 12px;
@@ -16,7 +16,7 @@
    color: #212121;
     }
     
- .modal-form-field{
+ .modal-form__field{
      margin-bottom: 10px;
      font-size: 12px;
      line-height: 1.17;
@@ -25,13 +25,13 @@
      color: #757575;
     }
    
- .modal-form-input-wrapper {
+ .modal-form__input-wrapper {
      position: relative;
      display: block;
      margin-top: 4px;
     }
  
- .modal-form-input{
+ .modal-form__input{
    width: 100%;
    height: 40px;
    box-sizing: border-box;
@@ -39,17 +39,14 @@
    border: 1px solid rgba(33, 33, 33, 0.2);
    padding-left: 42px;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+   &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+   }
   }
- 
-  .modal-form-input:focus {
-   outline: none;
-   border-color: var(--accent-color);
-  }
- 
-  .modal-form-input:focus + .modal-form-icon {
-    fill:var(--accent-color);
-  }
-  .modal-form-icon {
+
+  .modal-form__icon {
    position: absolute;
    top: 50%;
    left: 12px;
@@ -57,13 +54,17 @@
    height: 18px;
    transform: translateY(-50%);
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   .modal-form__input:focus + & {
+    fill:var(--accent-color);
+  }
  }
  
  .modal-comment {
    margin-bottom: 20px;
  }
  
- .modal-form-comment {
+ .modal-form__comment {
    width: 100%;
    height: 120px;
    padding: 12px 16px;
@@ -73,22 +74,22 @@
    border-radius: 4px;
    resize: none;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   &::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+  
+    color: rgba(117, 117, 117, 0.5);
+  }
+
+   &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
  }
  
- .modal-form-comment::placeholder {
-   font-size: 12px;
-   line-height: 1.17;
-   letter-spacing: 0.01em;
- 
-   color: rgba(117, 117, 117, 0.5);
- }
- 
- .modal-form-comment:focus {
-   outline: none;
-   border-color: var(--accent-color);
- }
- 
- .modal-form-term { 
+ .modal-form__term { 
    position: absolute;
    width: 1px;
    height: 1px;
@@ -99,23 +100,19 @@
    overflow: hidden;
  }
  
-   .modal-form-term:checked + .icon-check {
-   background-color: var(--accent-color);
-   transition:background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
- }  
- 
- .modal-form-term:focus + .modal-form-check-desc::before {
-   box-shadow: 0 0 0 2px var(--accent-color) ;
- }
- 
- .icon-check {
+ .check__icon {
    position: absolute;
    width: 16px;
    height: 16px;
-  //  background-image: url("../images/check.svg#check"); 
+  //  background-image: url("../images/check.svg#check");
+  
+  .modal-form__term:checked + & {
+    background-color: var(--accent-color);
+    transition:background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
  }
  
- .modal-form-check-desc {
+ .modal-form__check-desc {
    display: flex;
    align-items: center;
    position: relative;
@@ -125,23 +122,28 @@
    letter-spacing: 0.03em;
  
    color: #757575;
+
+  &::before {
+    display: block;
+    content: "";
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    color: #212121;
+    outline: 1px solid #000000 ;
+    cursor: pointer;
+
+    .modal-form__term:focus + & {
+      box-shadow: 0 0 0 2px var(--accent-color) ;
+    }
+  }
  }
- 
- .modal-form-check-desc::before {
-   display: block;
-   content: "";
-   width: 16px;
-   height: 16px;
-   margin-right: 8px;
-   color: #212121;
-   outline: 1px solid #000000 ;
-   cursor: pointer;
- }
- .checkbox-link {
+
+ .checkbox__link {
    color: var(--accent-color);
  }
  
- .modal-form-btn {
+ .modal-form__btn {
    width: 200px;
    height: 50px;
    align-self: center;
@@ -162,10 +164,12 @@
    cursor: pointer;
  
    color: #FFFFFF;
- }
- 
- .modal-form-btn:focus,
- .modal-form-btn:hover {
+
+ &:focus,
+ &:hover {
    background-color: #188CE8;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+ }
+ 
+ 
