--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,13 +24,14 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
+
+   &:hover,
+   &:focus {
+      fill: var(--accent-color) ;
+    }
+    
   } 
-  
-  .modal-close-btn:hover,
-  .modal-close-btn:focus {
-    fill: var(--accent-color) ;
-  }
-  
+
   .is-hidden {
     opacity: 0;  
     visibility: hidden;
