--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,4 +1,4 @@
-.social-list {
+ .social-list {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,16 +15,11 @@
     border-radius: 50%;
     background-color: #ffffff;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .social-list-link:hover,
-  .social-list-link:focus {
+
+  &:hover,
+  &:focus {
     background-color: var(--accent-color);
   }
-  
-  .social-list-link:hover .social-list-icon,
-  .social-list-link:focus .social-list-icon {
-    fill: #ffffff;
   }
   
   .social-list-icon {
@@ -32,6 +27,11 @@
     height: 20px;
     fill: #afb1b8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   .social-list-link:hover &,
+   .social-list-link:focus & {
+     fill: #ffffff;
+    }
   }
   
   .social-list-icon_dark-theme {
