--- a/sass/components/_tel-link.scss
+++ b/sass/components/_tel-link.scss
@@ -1,8 +1,3 @@
-.tel-link:hover .tel-list-icon,
-.tel-link:focus .tel-list-icon {
-  fill: var(--accent-color);
-}
-
 .tel-link {
   font-weight: 500;
   font-size: 14px;
@@ -14,9 +9,25 @@
   margin-right: 50px;
   margin-bottom: 9px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.tel-link:hover,
-.tel-link:focus {
+&:hover,
+&:focus {
   color: #2196f3;
 }
+}
+
+.tel-list-icon {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+.tel-link:hover &,
+.tel-link:focus & {
+fill: var(--accent-color);
+}
+}
+
+
+
