--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -8,13 +8,15 @@
     margin-top: -30px;
     justify-content: center;
     align-items: center;
-  }
-  
-  .clients-list-item {
+
+     
+  &__item {
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc(100% / 6 - 30px);
   }
+  }
+ 
   
   .clients-logo {
     width: 170px;
@@ -24,7 +26,7 @@
     border-radius: 4px;
   }
   
-  .clients-logo-link {
+  .clients-logo__link {
     width: 170px;
     height: 90px;
     display: flex;
@@ -33,13 +35,15 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
-  .clients-logo-icon {
+  .clients-logo__icon {
     fill: #afb1b8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .clients-logo-link:hover .clients-logo-icon,
-  .clients-logo-link:focus .clients-logo-icon {
+
+  .clients-logo__link:hover &,
+  .clients-logo__link:focus & {
     fill: var(--accent-color);
   } 
+  }
+  
+  
   
