--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -26,7 +26,7 @@
     text-align: left;
   }
   
-  .items {
+  .address-list-footer__item {
     margin-bottom: 9px;
   }
   
@@ -40,11 +40,11 @@
   
     margin-left: auto;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .contact-address:hover,
-  .contact-address:focus {
+
+  &:hover,
+  &:focus {
     color: #2196f3;
+  }
   }
   
   .logo-footer {
@@ -77,7 +77,7 @@
     justify-content: space-between;
   }
   
-  .social-list-link-footer {
+  .social-list-footer__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,20 +86,20 @@
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .social-list-link-footer:hover,
-  .social-list-link-footer:focus {
+
+  &:hover,
+  &:focus {
     background-color: var(--accent-color);
   }
+  }
   
-  .social-list-icon-footer {
+  .social-list-footer__icon {
     width: 20px;
     height: 20px;
     fill: #ffffff
     }
   
-  .footer-subscription-container {
+  .footer-container__subscription {
       margin-left: 94px;
     }
   
@@ -109,7 +109,7 @@
   }
   
   
-  .footer-form-input {
+  .footer-form__input {
     width: 358px;
     height: 50px;
     padding-left: 16px;
