--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -27,11 +27,11 @@
   
     color: #212121;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .navigation-link:hover,
-  .navigation-link:focus {
+
+  &:hover,
+  &:focus {
     color: #2196f3;
+  }
   }
   
   .navigation-item:not(:last-child) {
@@ -40,16 +40,18 @@
   
   .active-link {
     color: #2196f3;
-  }
-  
-  .active-link::after {
+
+  &::after {
     display: block;
     content: "";
     position: absolute;
     width: 48px;
     height: 4px;
     margin-top: 28px;
-  
+    
     background: #2196F3;
     border-radius: 2px;
+    }
   }
+  
+  
