--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,7 +3,7 @@
     background: #f5f4fa;
   }
   
-  .team-title {
+  .team__title {
     font-style: normal;
     font-size: 16px;
     font-weight: 500;
@@ -21,8 +21,15 @@
     margin-left: -30px;
     margin-top: -30px;
   }
-  
-  .team-list-item {
+
+  .team-container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  .team-list__item {
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc(100% / 4 - 30px);
@@ -33,12 +40,6 @@
     border-radius: 0px 0px 4px 4px;
   }
   
-  .team-container {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-  }
   
   .team-title-description {
     font-weight: normal;
